frontend/shared/scss/components/buttons.scss
@use '../base/variables' as *;
@use '../base/text-styles';
@use '../components/icons' as *;

.inline-link {
    &, &:hover, &:link, &:active, &:visited {
        color: $color-primary;
        font-weight: $font-weight-bold;
        text-decoration: none;
    }

    &.secundary {
        &, &:hover, &:link, &:active, &:visited {
            color: $color-gray-4;
        }
    }

    &:hover {
        opacity: 0.6;
    }

    &:active {
        opacity: 0.4;
    }
}

.icon-spacer {
    margin-right: 5px;
    vertical-align: middle;
}

.button {
    touch-action: manipulation;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    user-select: none;
    cursor: pointer;
    color: inherit;

    &:link, &:visited, &:active, &:hover {
        text-decoration: none;
    }

    &.simple {
         &:active {
            opacity: 0.4;
        }
    }

    &.primary, &.secundary, &.destructive {
        @extend .style-button;

        border-radius: $border-radius;
        
        transition: transform 0.2s, opacity 0.2s;

        height: 42px;
        padding: 0 27px;

        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

        text-align: center;
        align-items: center;
        justify-content: center;
        display: inline-flex;

        // Ignore stretch when a button is directly inside the main of st-view (which has display flex)
        align-self: flex-start;

        &:active {
            transform: scale(0.95, 0.95);
        }

        &:disabled {
            color: $color-gray-2;
            background: $color-white-shade;
            box-shadow: none;
            cursor: not-allowed;

            &:active {
                transform: none;
            }
        }

        > .icon, > .bubble {
            align-self: center;
            
            &:first-child {
                margin-right: 10px;
                margin-left: -5px;
            }

            &:last-child {
                margin-left: 10px;
                margin-right: -5px;
            }

            
        }

        &.full {
            width: 100%;
        }
    }

    &.primary {
        color: white;

        background: linear-gradient(to right, $color-primary, $color-primary-destination);
    

        &.focus-visible {
            // Create a hight contrast selection state, by adding multiple box shadows, to create a white border
            box-shadow: 0 0 0 2px var(--color-current-background, #{$color-background}), 0 0 0 4px $color-primary;
        }

        // Some weird thing in SCSS doesn't allow to combine this with the one above (it stops working)
        &:focus-visible {
            // Create a hight contrast selection state, by adding multiple box shadows, to create a white border
            box-shadow: 0 0 0 2px var(--color-current-background, #{$color-background}), 0 0 0 4px $color-primary;
        }

        .dropdown-text {
            flex-grow: 1;
            margin-right: -40px;
            padding-right: 40px;
        }

        > .bubble {
            @extend .style-bubble;
            background: $color-background;
            color: $color-primary;
        }

        .dropdown {
            position: relative;

            &:after {
                left: -$border-width;
                top: 0;
                bottom: 0;
                position: absolute;
                content: "";
                background: currentColor;
                opacity: 0.5;
                width: $border-width;
            }
            font-size: 24px;
            width: 40px;
            height: 42px;
            line-height: 42px;
            align-self: stretch;
            margin-right: -27px;
            margin-left: 27px - $border-width;

            &:hover {
                background-color: rgba($color-white, 0.2);
            }
        }
    }

    &.destructive {
        color: white;
        background: $color-error;

        &.focus-visible {
            // Create a hight contrast selection state, by adding multiple box shadows, to create a white border
            box-shadow: 0 0 0 2px var(--color-current-background, #{$color-background}), 0 0 0 4px $color-error;
        }

        // Some weird thing in SCSS doesn't allow to combine this with the one above (it stops working)
        &:focus-visible {
            // Create a hight contrast selection state, by adding multiple box shadows, to create a white border
            box-shadow: 0 0 0 2px var(--color-current-background, #{$color-background}), 0 0 0 4px $color-error;
        }
    }

    &.secundary {
        color: $color-gray-4;
        
        background: $color-gray-3;

        &.focus-visible {
            // Create a hight contrast selection state, by adding multiple box shadows, to create a white border
            box-shadow: 0 0 0 2px var(--color-current-background, #{$color-background}), 0 0 0 4px $color-gray-1;
        }

        // Some weird thing in SCSS doesn't allow to combine this with the one above (it stops working)
        &:focus-visible {
            // Create a hight contrast selection state, by adding multiple box shadows, to create a white border
            box-shadow: 0 0 0 2px var(--color-current-background, #{$color-background}), 0 0 0 4px $color-gray-1;
        }

        &.green {
            color: $color-success-dark;
            background: $color-success-background;
        }

        &.danger {
            color: $color-error-dark;
            background: $color-error-background;
        }
    }

    &.secundary, &.primary, &.text, &.destructive {
        &> span {
            text-overflow: ellipsis;
            overflow: hidden;
            white-space: nowrap;

            &.icon {
                text-overflow: clip;
                flex-shrink: 0;
            }
        }
    }

    &.tooltip-only {
        cursor: help;
    }

    &.text, &.navigation {
        @extend .style-button-small;
        color: $color-gray-4;
        text-overflow: ellipsis;
        
        //display: inline-block;
        //vertical-align: middle;
        display: flex;
        flex-direction: row;
        align-items: center;

        &.inline {
            display: inline-flex;
        }

        > span {
            min-width: 0;
        }

        > .icon {
            flex-shrink: 0;

            &:first-child {
                margin-right: 7px;
            }

            &:last-child {
                margin-left: 7px;
            }
        }


        // note: if you need overflow ellipsis, please use a <span> inside of the button.
        // we need to overflow for the breakout region
        overflow: visible; 

        height: 34px;
        line-height: 34px;
        white-space: nowrap;
        transition: opacity 0.2s 0.1s ease-out, color 0.2s;
        position: relative;
        max-width: 100%;

        &:after {
            // Increase touch area by 15pixels
            content: '';
            position: absolute;
            top: -5px;
            left: -10px;
            right: -10px;
            bottom: -5px;
        }

        &.navigation:last-child:after {
            right: -20px;
        }

        &.navigation:first-child:after {
            left: -20px;
        }

        &.small {
            font-size: 12px;
        }

        &.selected {
            color: $color-primary;
        }

        &.unbold {
            font-weight: $font-weight-medium;
        }
        
        &.inherit-color {
            color: inherit;
        }

        > * {
            vertical-align: top;
        }

        > .bubble {
            @extend .style-bubble;
        }

        &.column {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            height: auto;
            line-height: 1;
            position: relative;
            overflow: visible;

            > span {
                margin-bottom: 4px;
            }

            > .bubble {
                background: $color-error;
                position: absolute;
                left: 50%;
                top: 0;
                transform: translate(calc(12px - 20%), -20%);
            }
        }

        &:active {
            opacity: 0.15;
            transition: opacity 0s, color 0.2s;
        }

        @media (max-width: 500px) {
            &.limit-space {
                overflow: visible;
                
                span:not(.icon) {
                    display: none
                }
            }
        }

        &:disabled {
            color: $color-gray-2;
            box-shadow: none;
            cursor: not-allowed;

            &:active {
                transform: none;
            }
        }
    }

    &.icon {
        transition: opacity 0.2s ease-out, color 0.2s ;
        overflow: visible; // fix for breakout region

        &:after {
            // Breakout region
            // Increase touch area by 15pixels
            content: '';
            position: absolute;
            top: -10px;
            left: -10px;
            right: -10px;
            bottom: -10px;
        }

        &.navigation:last-child:after {
            right: -20px;
        }

        &.navigation:first-child:after {
            left: -20px;
        }

        &:active {
            opacity: 0.15;
            transition: opacity 0s, color 0.2s;
        }

        position: relative;

        body.web-android &, body.native-android & {
            transition: none;
            &:active {
                opacity: 1;
                transition: none;
            }

            &:after {
                content: "";
                position: absolute;
                left: 50% !important;
                right: auto !important;
                width: 50px;
                height: 50px;
                top: 50% !important;
                bottom: auto !important;
                background: $color-gray-3;
                border-radius: 200px;
                pointer-events: none;

                transform: translate(-50%, -50%) scale(0.05, 0.05) ;
                z-index: 0;

                will-change: opacity, transform;
                opacity: 0;

                transition: opacity 0.2s cubic-bezier(0.0, 0.0, 0.2, 1), transform 0.2s 0.2s cubic-bezier(0.0, 0.0, 0.2, 1);;


            }

            &:before {
                z-index: 1;
            }

            &.active {
                opacity: 1;
                &:after {

                    opacity: 1;
                    transform: translate(-50%, -50%) scale(1, 1);

                    transition: opacity 0.2s cubic-bezier(0.0, 0.0, 0.2, 1), transform 0.2s cubic-bezier(0.0, 0.0, 0.2, 1);
                }
            }
        }
    }
}

.button.navigation {
    font-size: 17px;
    font-weight: $font-weight-medium;
    color: $color-gray-4;

    overflow: visible;

    // Visually correct back button
    &:first-child > .icon.arrow-back:first-child {
        margin-left: -4px;
    }

    body.native-iOS &, body.web-iOS & {
        color: $color-primary;

        // Visually correct back button
        &:first-child > .icon.arrow-back:first-child {
            margin-left: -14px;
            margin-right: 0px;
        }
    }

    body.native-android &, body.web-android & {
        color: $color-dark;
    }

    &.highlight {
        font-weight: $font-weight-semibold;
    }

    &:disabled {
        color: $color-gray-2 !important;
        box-shadow: none;
        cursor: not-allowed;

        &:active {
            transform: none;
        }
    }
}

// Non clickable button
span.button.text {
    height: 24px;
    line-height: 24px;
}

